--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -52,6 +52,7 @@ jobs:
       uses: docker/setup-qemu-action@v3
 
     - name: Set up Docker Buildx
+      id: buildx
       uses: docker/setup-buildx-action@v3
 
     - name: Docker Login
@@ -64,5 +65,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        context: .
+        platforms: ${{ steps.buildx.outputs.platforms }}
         push: true
         tags: ${{ steps.prepare.outputs.tags }}
